--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -2,6 +2,16 @@
 @breakpointMobile: ~"(max-width: 767px)";
 @breakpointTablet: ~"(min-width: 768px) and (max-width: 1023px)";
 
+.marginBotton8 {
+    margin-bottom: 8px;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
 
 body{
     background-color: @corDeFundo;
@@ -14,13 +24,39 @@ body{
     margin: 0 auto;
 
     @media @breakpointMobile {
-        background-color: red;
         max-width: 70%;
     }
 
     @media @breakpointTablet {
         max-width: 80%;
-        background-color: yellow;
+    }
+}
+
+header{
+    padding: 24px;
+
+    .profile-avatar{
+        display: block;
+        margin: 0 auto 24px;
+        border-radius: 50%;
+    }
+}
+
+.profile-bio {
+    text-align: center;
+    &-name {
+        font-size: 16px;
+        .marginBotton8();
+    }
+
+    &-subtitle {
+        font-size: 14px;
+        .marginBotton8();
+    }
+
+    &-description {
+        font-size: 14px;
+        opacity: .7;
     }
 }
 
