--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,6 +1,8 @@
-@import "variaveis.less";
+@import "mapas.less";
+    
 @breakpointMobile: ~"(max-width: 767px)";
 @breakpointTablet: ~"(min-width: 768px) and (max-width: 1023px)";
+
 
 .marginBotton8 {
     margin-bottom: 8px;
@@ -14,8 +16,8 @@
 }
 
 body{
-    background-color: @corDeFundo;
-    color: @corDeTexto;
+    background-color: #colors[backgroundColor];
+    color: #colors[textColor];
 }
 
 .container {
@@ -57,6 +59,25 @@ header{
     &-description {
         font-size: 14px;
         opacity: .7;
+    }
+}
+
+.social-links {
+    display: flex;
+    justify-content: space-between;
+    max-width: 360px;
+    width: 100%;
+    margin: 0 auto;
+
+    li {
+        list-style: none;
+        
+        img {
+            transition: all ease .3s;
+            &:hover {
+                transform: scale(1.3);
+            }
+        }
     }
 }
 
