Exercicio do modulo introdução ao LESS

--- a/src/styles/mapas.less
+++ b/src/styles/mapas.less
@@ -1,5 +1,7 @@
 #colors() {
-    backgroundColor: #30336b;
-    buttonColor: #95afc0;
-    textColor: #f5f6fa;
+    bodyBackgroundColor: #f5f6fa;
+    headerBackgroundColor: #182c61;
+    textColor: #fff;
+    buttonBackgroundColor: #44bd32;
+    hoverBackgroundColor: #4cd137;    
 }
