--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -3,11 +3,6 @@
 @breakpointMobile: ~"(max-width: 767px)";
 @breakpointTablet: ~"(min-width: 768px) and (max-width: 1023px)";
 
-
-.marginBotton8 {
-    margin-bottom: 8px;
-}
-
 *{
     margin: 0;
     padding: 0;
@@ -16,8 +11,7 @@
 }
 
 body{
-    background-color: #colors[backgroundColor];
-    color: #colors[textColor];
+    background-color: #colors[bodyBackgroundColor];
 }
 
 li {
@@ -25,89 +19,92 @@ li {
 }
 
 .container {
-    max-width: 960px;
+    max-width: 1024px;
     width: 100%;
     margin: 0 auto;
-    height: 100vh;
+}
+
+header {
+    background-color: #colors[headerBackgroundColor];
+    position:sticky;
+    top: 0;
+    left: 0;
+
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 16px 0;
+    }
+}
+
+.menu {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    @media @breakpointMobile {
-        max-width: 70%;
-    }
-
-    @media @breakpointTablet {
-        max-width: 80%;
-    }
-}
-
-header{
-    padding-bottom: 24px;
-
-    .profile-avatar{
-        display: block;
-        margin: 0 auto 24px;
-        border-radius: 50%;
-    }
-}
-
-.profile-bio {
-    text-align: center;
-    &-name {
-        font-size: 16px;
-        .marginBotton8();
-    }
-
-    &-subtitle {
-        font-size: 14px;
-        .marginBotton8();
-    }
-
-    &-description {
-        font-size: 14px;
-        opacity: .7;
-    }
-}
-
-.social-links {
-    display: flex;
-    justify-content: space-between;
-    max-width: 360px;
-    width: 100%;
-    margin: 0 auto;
 
     li {
-        img {
-            transition: all ease .3s;
-            &:hover {
-                transform: scale(1.3);
-            }
-        }
-    }
-}
+        font-weight: bold;
+        margin-left: 24px;
 
-.projects-list {
-    margin-top: 32px;
-    &-item {
         a {
-            text-decoration: none;
-            background-color: #colors[buttonColor];
-            display: block;
-            padding: 16px 20px;
-            margin-bottom: 16px;
-            text-align: center;
             color: #colors[textColor];
-            font-weight: bold;
-            border-radius: 30px;
-            border: 2px solid #colors[buttonColor];
-            transition: all ease .5s;
-
-            &:hover {
-                color: #colors[buttonColor];
-                background-color: transparent;
-            }
+            text-decoration: none;
         }
     }
 }
+
+section {
+    padding: 56px 0;
+}
+
+.products {
+    margin-top: 40px;
+    display: grid;
+    grid-template-columns: repeat(3, 32.66%);
+    column-gap: 1%;
+    row-gap: 4%;
+    width: 100%;
+
+    &-item img {
+        width: 100%;
+        border-radius: 16px;
+    }
+
+    &-button {
+        display: block;
+        background-color: #colors[buttonBackgroundColor];
+        color: #colors[textColor];
+        text-align: center;
+        padding: 8px 0;
+        border-radius: 8px;
+        margin-top: 8px;
+        text-decoration: none;
+    }
+
+    &-button:hover {
+        background-color: #colors[hoverBackgroundColor];
+    }
+}
+
+@media @breakpointMobile {
+    .products {
+        display: block;
+
+        &-item {
+            margin-bottom: 32px;
+        }
+    }
+}
+
+@media @breakpointTablet {
+    .container {
+        max-width: 80%;
+    }
+
+    .products {
+        grid-template-columns: repeat(2, 48.5%);
+        column-gap: 3%;
+    }
+}
+
+
 
