--- a/src/styles/mapas.less
+++ b/src/styles/mapas.less
@@ -1,5 +1,6 @@
 #colors() {
-    backgroundColor: #30336b;
-    buttonColor: #95afc0;
+    backgroundColor: #2f3640;
+    buttonColor: #44bd32;
     textColor: #f5f6fa;
+    buttonHoverColor: #4cd137;
 }
